--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 12, 2009, 9:43 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235802">Bug 235802</a>. [Markers] Marker testResourceMappings failure in I20080604-2000 on linux java 5.0 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267903">Bug 267903</a>. Errors in org.eclipse.swt.dnd.Clipboard.setContents (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268250">Bug 268250</a>. [CommonNavigator] Project labels missing in Project Explorer when working sets are top level elements (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 12, 2009, 5:48 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
