--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 16, 2009, 10:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266038">Bug 266038</a>. [DataBinding] Observable*ContentProvider clears known elements after viewer disposed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268319">Bug 268319</a>. [Dialogs] Disabled FilteredTree filter looks half-way disabled (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268336">Bug 268336</a>. [DataBinding] JavaBeanObservableValue should propagate changes for property name "null" (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 12, 2009, 9:43 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
