The map file has been updated for the following Bug changes: + Bug 182920. [History View] Use SWT.SEARCH style on history view search field (FIXED) + Bug 195495. [Viewers] Add option to do nothing on reaching the end (FIXED) + Bug 232766. The 'Specify Repository Information' dialog is not accessible (FIXED) + Bug 265277. [Net] Unknownhostexception: http (FIXED) + Bug 268191. new "label" attributes in schema should be marked with "since 3.5" (FIXED) + Bug 268344. New "helpContextId" attribute in synchronizeParticipants schema should be tagged "since 3.5" (FIXED) + Bug 268355. [Net] checkboxes cut off in Network Connections preference page (FIXED) + Bug 268474. [Net] CVS connections fail with the "Native" Proxy provider (FIXED) + Bug 268756. INavigatable of DiffTreeViewer always returns true on openSelectedChange (FIXED)
The following projects have changed:
org.eclipse.ui.net
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,20 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 17, 2009, 12:51 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=182920">Bug 182920</a>. [History View] Use SWT.SEARCH style on history view search field (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=195495">Bug 195495</a>. [Viewers] Add option to do nothing on reaching the end (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=232766">Bug 232766</a>. The 'Specify Repository Information' dialog is not accessible (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265277">Bug 265277</a>. [Net] Unknownhostexception: http (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268191">Bug 268191</a>. new "label" attributes in schema should be marked with "since 3.5" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268344">Bug 268344</a>. New "helpContextId" attribute in synchronizeParticipants schema should be tagged "since 3.5" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268355">Bug 268355</a>. [Net] checkboxes cut off in Network Connections preference page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268474">Bug 268474</a>. [Net] CVS connections fail with the "Native" Proxy provider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268756">Bug 268756</a>. INavigatable of DiffTreeViewer always returns true on openSelectedChange (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 11, 2009, 12:20 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
