--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -131,10 +131,10 @@ should instead reference the new API constants.</p>
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267251">Bug 267251</a>: [launching] Add a RefreshTab.getID() implementation.<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262261">262261</a>: Bug 262261 &ndash; [breadcrumb] Add actions to Debug view to switch between tree view, breadcrumb, or automatic modes.<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262262">262262</a>: Bug 262262 &ndash; [breadcrumb] Add actions to quickly switch between contexts in Debug view.<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262870">262870</a>: Bug 262870 &ndash; [breadcrumb] When debug view is activated no item has focus.<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262837">262837</a>: Bug 262837 &ndash; No more handle exception when working in Debug Perspective<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262261">Bug 262261</a>: [breadcrumb] Add actions to Debug view to switch between tree view, breadcrumb, or automatic modes.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262262">Bug 262262</a>: [breadcrumb] Add actions to quickly switch between contexts in Debug view.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262870">Bug 262870</a>: [breadcrumb] When debug view is activated no item has focus.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262837">Bug 262837</a>: No more handle exception when working in Debug Perspective<br>
 
 
 <h2>February 10, 2009</h2>
@@ -161,9 +161,9 @@ should instead reference the new API constants.</p>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=259839">Bug 259839</a>: Typo in TerminateAndRelaunchAction<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=259107">Bug 259107</a>: [console] Console Deadlock when too much information written<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253955">253955</a>: Bug 253955 &ndash; Hitting breakpoint gives focus to workbench instead of dialog<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=245314">245314</a>: Bug 245314 &ndash; Populating variables view with logical structures is really slow<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253257">253257</a>: Bug 253257 &ndash; Source lookup job data getting overwritten while running<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253955">Bug 253955</a>: Hitting breakpoint gives focus to workbench instead of dialog<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=245314">Bug 245314</a>: Populating variables view with logical structures is really slow<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253257">Bug 253257</a>: Source lookup job data getting overwritten while running<br>
 
 <h2>December 16, 2008</h2>
 <h3>Problem Reports Fixed</h3>
@@ -274,7 +274,7 @@ should instead reference the new API constants.</p>
 
 <h2>June 24, 2008</h2>
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=236076">236076</a>: [launching] Run and Debug History menus not updated after reorganize favorites<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=236076">Bug 236076</a>: [launching] Run and Debug History menus not updated after reorganize favorites<br>
 
 <p>&nbsp;</p>
 </body>
