updated build notes

--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -15,6 +15,10 @@ Eclipse 3.5 Ant Build Notes</h1>
   <li>Added API constants for Ant launch configuration attributes - <code>org.eclipse.ant.ui.launching.IAntLaunchConfigurationConstants</code>.</li>
 </ul>
 
+<h2>March 23, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267459">Bug 267459</a>: Java project with an external jar file from FS root on the build path throws a NPE during the Ant Buildfile generation.<br>
+
 <h2>February 3, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=218074">Bug 218074</a>: button label truncations on External Tools Builders config dialog<br>
