updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -114,6 +114,8 @@ should instead reference the new API constants.</p>
 
 <h2>March 17, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262850">Bug 262850</a>: [launch modes] When a launch delegate is not selected, the &quot;Multiple launchers available&quot; label should have an error decorator.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=268876">Bug 268876</a>: [launching] OK button disabled in Select Preferred Launcher dialog<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=102766">Bug 102766</a>: [launching] Shared launch configurations not displayed in favorites when importing/opening containing project<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=268130">Bug 268130</a>: Labels on 'JRE' launch tab does not use sentence style<br>
 
