The map file has been updated for the following Bug changes: + Bug 189984. [Apply Patch] Wizard should expand first tree item (FIXED) + Bug 228000. [Tests] Add tests for the "Count lines in the patch" feature (FIXED) + Bug 248431. Restore from Local History... does nothing, logs StringIndexOutOfBoundsException (FIXED) + Bug 264498. [Dialogs] Add Compare with Other Resource dialog to popup menu (ASSIGNED) + Bug 267817. [Patch] Inform user if changes are not included in the patch (FIXED) + Bug 268360. [Edit] NPE in CompareEditor on remote Java source files (FIXED) + Bug 268805. INavigatable#hasChange of DiffTreeViewer expands items in the tree viewer (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.core
org.eclipse.team.cvs.ui
org.eclipse.compare.tests
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 23, 2009, 3:58 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=189984">Bug 189984</a>. [Apply Patch] Wizard should expand first tree item (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=228000">Bug 228000</a>. [Tests] Add tests for the "Count lines in the patch" feature (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248431">Bug 248431</a>. Restore from Local History... does nothing, logs StringIndexOutOfBoundsException (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264498">Bug 264498</a>. [Dialogs] Add Compare with Other Resource dialog to popup menu (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267817">Bug 267817</a>. [Patch] Inform user if changes are not included in the patch (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268360">Bug 268360</a>. [Edit] NPE in CompareEditor on remote Java source files (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268805">Bug 268805</a>. INavigatable#hasChange of DiffTreeViewer expands items in the tree viewer (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 17, 2009, 12:51 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
