updated build notes

--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -17,6 +17,7 @@ Eclipse 3.5 Ant Build Notes</h1>
 
 <h2>March 23, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=161354">Bug 161354</a>: Exported ANT scripts should use the 'dir' attribute of the ant task<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=201143">Bug 201143</a>: exported ant script does not apply include/exclude filter on init target's copy task<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267459">Bug 267459</a>: Java project with an external jar file from FS root on the build path throws a NPE during the Ant Buildfile generation.<br>
 
