--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,20 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 31, 2009, 1:15 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=215328">Bug 215328</a>. [Change Sets] Open action from the popup menu on a change set (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=247628">Bug 247628</a>. [changeset] Having 2 edit actions in context menu is confusing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266476">Bug 266476</a>. [Viewers] Use new mechanism to switch to text compare while comparing binary content (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267817">Bug 267817</a>. [Patch] Inform user if changes are not included in the patch (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268189">Bug 268189</a>. UI polish for compare viewer switcher (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269062">Bug 269062</a>. [Viewers] CompareContentViewerSwitchingPane leaks Menu (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269723">Bug 269723</a>. [Wizards] Unable to "Check out as..." from CVS (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269830">Bug 269830</a>. [Sync View] Edit items in the context menu should be top level elements (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270427">Bug 270427</a>. NPE when comparing two jars as text (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 23, 2009, 3:58 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
