*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,27 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 31, 2009, 7:56 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=178229">Bug 178229</a>. [Dialogs] [EditorMgmt] Open Resource dialog should not fully create all editors (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=230360">Bug 230360</a>. [JFace] FontRegistry does not play nicely with non-UI threads (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=246593">Bug 246593</a>. [Markers] Optimize problems view result caching (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252309">Bug 252309</a>. [Markers] Improving Problems View, Markers View UI performance (DUPLICATE)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258434">Bug 258434</a>. [KeyBindings] Keybindings - Issues with changing schemes (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263690">Bug 263690</a>. [Commands] Command that can throw a CoreException during execution is considered successfully run (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265049">Bug 265049</a>. [CommonNavigator] ClassCastException from WorkingSetFilterActionGroup (that should not happen) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267359">Bug 267359</a>. [Commands] The platform hangs upon shutdown when an Action Handler dispose method throws an exception (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267408">Bug 267408</a>. [Contributions] RadioState should work like RegistryToggleState (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267409">Bug 267409</a>. [Contributions] Tests for toggle state and radio state (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268955">Bug 268955</a>. [Commands] IWorkbenchCommandConstants is missing API restrictions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268981">Bug 268981</a>. [CommonNavigator] [Navigator] Deprecated ResourceNavigator APIs should tell migration path (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269466">Bug 269466</a>. [Progress] CCE caused by ProgressManager's 3.x workbench assumptions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269711">Bug 269711</a>. [jface] org.eclipse.jface.viewers.StructuredViewerInternals.AssociateListener contains an invalid api tooling tag (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270120">Bug 270120</a>. [CommonNavigator] tracing .options file *not* put in kit (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270461">Bug 270461</a>. [DataBinding] Bug in org.eclipse.core.databinding.Update<List|Set|Value>Strategy.fillDefaults() (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 23, 2009, 3:08 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
