--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -109,6 +109,7 @@ should instead reference the new API constants.</p>
 
 <h2>April 7, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=271055">Bug 271055</a>: Risk of deleting a launch configuration multiple times<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=271113">Bug 271113</a>: !MESSAGE NLS unused message: BreakpointTypesContribution_noBreakpointsActive_menuItem<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=269961">Bug 269961</a>: [launching] Confusing &quot;Discard Changes?&quot; dialog when trying to filter with pending changes<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=233233">Bug 233233</a>: [launching] Default Launchers -- description does not update when click on the checkbox<br>
