--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -15,6 +15,10 @@ Eclipse 3.5 Ant Build Notes</h1>
   <li>Added API constants for Ant launch configuration attributes - <code>org.eclipse.ant.ui.launching.IAntLaunchConfigurationConstants</code>.</li>
 </ul>
 
+<h2>April 7, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=270041">Bug 270041</a>: Any first Ant target invocation builds open java projects while Build Automatically is turned off<br>
+
 <h2>March 23, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=161354">Bug 161354</a>: Exported ANT scripts should use the 'dir' attribute of the ant task<br>
