*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,23 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 06, 2009, 9:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=68684">Bug 68684</a>. [EditorMgmt] tabs: Remove the MRU tab reordering code from the default presentation (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=69953">Bug 69953</a>. [PropertiesView] "Properties" view loss (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258729">Bug 258729</a>. [Metadata] Platform/UI plug-ins needs more project-specific settings (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260417">Bug 260417</a>. [Commands] Handler expressions ignored in multi page editors. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268472">Bug 268472</a>. [DataBinding] [Provisional] ControlDecorationSupport (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268676">Bug 268676</a>. [PropertiesView] pinning is not working (well) with tabbed properties (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268688">Bug 268688</a>. [DataBinding] changing beans on a different thread (outside of Realm) causes AssertionFailedExceptions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268950">Bug 268950</a>. [Commands] New APIs in IWorkbenchCommandConstants are missing '_' separators (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270774">Bug 270774</a>. [Mac] ui.tests.rcp did not finish because CocoaUIEnhancer crashes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270883">Bug 270883</a>. UI Test failures on Cocoa (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271020">Bug 271020</a>. [Compatibility] Build the main menu from the IDE action bar advisor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271080">Bug 271080</a>. [DataBinding] Table viewer selection binding does not sync row focus (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 31, 2009, 7:56 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
