The map file has been updated for the following Bug changes: + Bug 235569. [Actions] NPE in CVSAction (FIXED) + Bug 268950. [Commands] New APIs in IWorkbenchCommandConstants are missing '_' separators (FIXED) + Bug 269495. [Preferences] Compare/Patch preview on preference page: Set Encoding... throws AFE (FIXED) + Bug 270458. [Net] Untranslated combo on Network Connections pref page (FIXED) + Bug 270726. [Viewers] Binary Compare available for a Java Node (FIXED) + Bug 270755. Using binary compare on an image says "Internal Error" (FIXED) + Bug 270929. [perfs] Changes to DocLineComparator introduced a regression in 3-way compare perf test (ASSIGNED)
The following projects have changed:
org.eclipse.ui.net
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.win32
org.eclipse.compare.tests
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (April 07, 2009, 1:11 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235569">Bug 235569</a>. [Actions] NPE in CVSAction (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268950">Bug 268950</a>. [Commands] New APIs in IWorkbenchCommandConstants are missing '_' separators (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269495">Bug 269495</a>. [Preferences] Compare/Patch preview on preference page: Set Encoding... throws AFE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270458">Bug 270458</a>. [Net] Untranslated combo on Network Connections pref page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270726">Bug 270726</a>. [Viewers] Binary Compare available for a Java Node (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270755">Bug 270755</a>. Using binary compare on an image says "Internal Error" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270929">Bug 270929</a>. [perfs] Changes to DocLineComparator introduced a regression in 3-way compare perf test (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (March 31, 2009, 1:15 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
