updated build notes

--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -18,6 +18,7 @@ Eclipse 3.5 Ant Build Notes</h1>
 <h2>April 14, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=222615">Bug 222615</a>: Export Ant buildfile does not export JUnit4 style tests<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=223902">Bug 223902</a>: [launching] No descriptions for ant launch shortcuts<br>
 
 <h2>April 7, 2009</h2>
 <h3>Problem Reports Fixed</h3>
