*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 13, 2009, 10:13 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=199499">Bug 199499</a>. Switching tabs by Ctrl+PageUp/PageDown must not be caught on the inner tab set (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271148">Bug 271148</a>. [DataBinding] UpdateStrategy Policies not working as expected (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271456">Bug 271456</a>. [Metadata] Add ability to run a single performance test (vs the whole suite) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271683">Bug 271683</a>. [Compatibility] hook into the popup menus, somehow (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271720">Bug 271720</a>. [DataBinding] NullPointerException via DateTimeSelectionProperty (REOPENED)<br>
+  </p>
+
 <p>Integration Build (April 06, 2009, 9:55 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
