The map file has been updated for the following Bug changes: + Bug 266812. [Tests] Add tests for creating/applying patches from UI (FIXED) + Bug 271343. Methods for StructureViewerAliases in CompareUI should be tagged with @noreference (FIXED) + Bug 271434. Missing mnemonics in "End Reached" dialog when navigating changes (FIXED) + Bug 271612. Increment minimal versions of required plug-ins in team and compare plug-ins (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.core
org.eclipse.team.cvs.ui
org.eclipse.compare.win32
org.eclipse.compare.tests
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (April 14, 2009, 1:54 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266812">Bug 266812</a>. [Tests] Add tests for creating/applying patches from UI (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271343">Bug 271343</a>. Methods for StructureViewerAliases in CompareUI should be tagged with @noreference (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271434">Bug 271434</a>. Missing mnemonics in "End Reached" dialog when navigating changes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271612">Bug 271612</a>. Increment minimal versions of required plug-ins in team and compare plug-ins (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 07, 2009, 1:11 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
