updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -107,6 +107,10 @@ view which were defined in an internal interface.  This change moves these const
 <p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface, 
 should instead reference the new API constants.</p>
 
+<h2>April 20, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=268978">Bug 268978</a>: Build before launch should use one top level workspace runnable<br>
+
 <h2>April 7, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=271055">Bug 271055</a>: Risk of deleting a launch configuration multiple times<br>
