--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -110,6 +110,7 @@ should instead reference the new API constants.</p>
 <h2>April 20, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=268978">Bug 268978</a>: Build before launch should use one top level workspace runnable<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=233040">Bug 233040</a>: ConsoleTerminateAction performed in UI thread, occasionally lags<br>
 
 <h2>April 7, 2009</h2>
 <h3>Problem Reports Fixed</h3>
