The map file has been updated for the following Bug changes: + Bug 188278. [History View] History sometimes not correctly filled with revision  when is a fast view (FIXED) + Bug 220457. Take multiple content-types into account (FIXED) + Bug 225334. [Patch] Layout on the "Apply Patch" wizard gets messy (FIXED) + Bug 261430. [Viewers] IllegalArgumentException while comparing in the sync view (FIXED) + Bug 266812. [Tests] Add tests for creating/applying patches from UI (FIXED) + Bug 271343. Methods for StructureViewerAliases in CompareUI should be tagged with @noreference (FIXED) + Bug 271434. Missing mnemonics in "End Reached" dialog when navigating changes (FIXED) + Bug 271612. Increment minimal versions of required plug-ins in team and compare plug-ins (FIXED) + Bug 271757. TextMergeViewer.createSourceViewer(...) should return SourceViewer (FIXED) + Bug 272870. org.eclipse.swt.SWTError: Cannot set data in clipboard (NEW)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.compare.tests
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,21 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (April 21, 2009, 3:21 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=188278">Bug 188278</a>. [History View] History sometimes not correctly filled with revision  when is a fast view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=220457">Bug 220457</a>. Take multiple content-types into account (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=225334">Bug 225334</a>. [Patch] Layout on the "Apply Patch" wizard gets messy (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261430">Bug 261430</a>. [Viewers] IllegalArgumentException while comparing in the sync view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266812">Bug 266812</a>. [Tests] Add tests for creating/applying patches from UI (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271343">Bug 271343</a>. Methods for StructureViewerAliases in CompareUI should be tagged with @noreference (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271434">Bug 271434</a>. Missing mnemonics in "End Reached" dialog when navigating changes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271612">Bug 271612</a>. Increment minimal versions of required plug-ins in team and compare plug-ins (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271757">Bug 271757</a>. TextMergeViewer.createSourceViewer(...) should return SourceViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272870">Bug 272870</a>. org.eclipse.swt.SWTError: Cannot set data in clipboard (NEW)<br>
+  </p>
+
 <p>Integration Build (April 14, 2009, 1:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
