Bug 220657: Teminate All in ConsoleView. https://bugs.eclipse.org/bugs/show_bug.cgi?id=220657

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -110,6 +110,7 @@ should instead reference the new API constants.</p>
 <h2>April 27, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273082">Bug 273082</a>: BreakpointsView-Group By sub-menu contains extra mnemonics<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=220657">Bug 220657</a>: Teminate All in ConsoleView.<br>
 
 <h2>April 20, 2009</h2>
 <h3>Problem Reports Fixed</h3>
