--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -112,6 +112,7 @@ should instead reference the new API constants.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273082">Bug 273082</a>: BreakpointsView-Group By sub-menu contains extra mnemonics<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=220657">Bug 220657</a>: Teminate All in ConsoleView.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=272489">Bug 272489</a>: Debug view: &quot;View Mode&quot; menu misses mnemonics<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=272367">Bug 272367</a>: &quot;Show Type Names&quot; attribute is not available in the IPresentationContext properties<br>
 
 <h2>April 20, 2009</h2>
 <h3>Problem Reports Fixed</h3>
