*** empty log message ***

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -114,6 +114,7 @@ should instead reference the new API constants.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=272489">Bug 272489</a>: Debug view: &quot;View Mode&quot; menu misses mnemonics<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=272367">Bug 272367</a>: &quot;Show Type Names&quot; attribute is not available in the IPresentationContext properties<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273178">Bug 273178</a>: Repeated expressions in expressions window<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273617">Bug 273617</a>: property tester expression doesn't check selected element's type<br>
 
 <h2>April 20, 2009</h2>
 <h3>Problem Reports Fixed</h3>
