The map file has been updated for the following Bug changes: + Bug 169386. [Theme] More Java editor features in Compare Editor (FIXED) + Bug 259411. Fix TODOs from bug 169386 (ASSIGNED) + Bug 260529. [Viewers] (especially Java) moving caret dead slow if whitespaces are shown (FIXED) + Bug 267817. [Patch] Inform user if changes are not included in the patch (FIXED) + Bug 273266. Non-externalized string in org.eclipse.compare.win32/plugin.xml (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.core
org.eclipse.team.cvs.ui
org.eclipse.compare.win32

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (April 27, 2009, 1:18 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=169386">Bug 169386</a>. [Theme] More Java editor features in Compare Editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259411">Bug 259411</a>. Fix TODOs from bug 169386 (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260529">Bug 260529</a>. [Viewers] (especially Java) moving caret dead slow if whitespaces are shown (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267817">Bug 267817</a>. [Patch] Inform user if changes are not included in the patch (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273266">Bug 273266</a>. Non-externalized string in org.eclipse.compare.win32/plugin.xml (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 21, 2009, 3:21 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
