*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 27, 2009, 12:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271690">Bug 271690</a>. [CommonNavigator] SWTException when doing a refactor rename in project explorer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272651">Bug 272651</a>. [DataBinding] Diffs.computeListDiff(..) is not handling replace (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273265">Bug 273265</a>. [DataBinding] ChangeManager doesn't support Cloneable (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 26, 2009, 7:49 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
