*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 27, 2009, 5:49 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=154730">Bug 154730</a>. [Presentations] Editor PresentationStack never gets disposed when IWorkbenchConfigurer.setSaveAndRestore(true) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=224341">Bug 224341</a>. [ErrorHandling] SafeRunnnableDialog shows only "Reason" as message. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=232963">Bug 232963</a>. [Preferences] test for : Can't open PreferenceDialog with own PreferenceNodes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261622">Bug 261622</a>. [ActivityMgmt] View shortcut is displayed in the Show View's sub-menu if the activity was disabled (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272884">Bug 272884</a>. [EditorMgmt] IWorkbenchPage#openEditors(IEditorInput[], ..) should add editors at front of MRU list (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273047">Bug 273047</a>. [Themes] Colors and Fonts page needs polish (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 27, 2009, 12:55 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
