--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 28, 2009, 12:18 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244284">Bug 244284</a>. [Preferences] Preference page help is not shown when tree is selected (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249502">Bug 249502</a>. [Coolbar] init is called during dispose of a IWorkbenchWindowPulldownDelegate2 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267454">Bug 267454</a>. [EditorMgmt] Editor dirty state not synchronized after workbench restart (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269020">Bug 269020</a>. [Viewers] ClassCastException in org.eclipse.ui.dialogs.PatternFilter (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 27, 2009, 5:49 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
