The map file has been updated for the following Bug changes: + Bug 260668. [Sync View] Synchronization lost (FIXED) + Bug 274239. TextMergeViewer should dispose its colors at the end (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (April 29, 2009, 1:44 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260668">Bug 260668</a>. [Sync View] Synchronization lost (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274239">Bug 274239</a>. TextMergeViewer should dispose its colors at the end (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 27, 2009, 1:18 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
