--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 29, 2009, 12:25 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273697">Bug 273697</a>. [WorkingSets] WorkbenchPage's setWorkingSets(IWorkingSet[]) has an impossible null conditional check (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273706">Bug 273706</a>. [WorkingSets] Changing workingset membership broken (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274236">Bug 274236</a>. [CommonNavigator] Incorrect check for existence of item in contribution memory (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 28, 2009, 12:18 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
