*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 29, 2009, 12:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274260">Bug 274260</a>. Dialog to cancel history pruning on shutdown needs polish (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (April 29, 2009, 12:25 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
